--- a/WebAPP/dlsas.html
+++ b/WebAPP/dlsas.html
@@ -36,7 +36,7 @@
 <div class="container">
     <div class="row">
     <div class="col-sm-11 col-md-11 col-md-offset-1" id ="layout">
-      <form>
+      <form method="POST" action="php2.php">
         <div class="form-group">
             </br>
             </br>
@@ -48,12 +48,12 @@
                     </div>
                 <div class="col-sm-3 col-md-3">
                     <label class="radio-inline">
-                        <input name="gender" id="male" value="Male" type="radio" />Male
+                        <input name="gender"  value="Male" type="radio" />Male
                     </label>
                 </div>
                 <div class="col-sm-3 col-md-3">
                     <label class="radio-inline">
-                    <input name="gender" id="female" value="Female" type="radio" />Female
+                    <input name="gender"  value="Female" type="radio" />Female
                     </label>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col-sm-3 col-md-3">
                     <label class="radio-inline">
-                    <input name="family" id="nuclear" value="Nuclear" type="radio"          />No
+                    <input name="family" id="nuclear" value="Nuclear" type="radio"/>No
                     </label>
                 </div>
             </div>
@@ -88,31 +88,31 @@
             </div>
         <div id="input-type" class="row">
             <div class="col-sm-3 col-md-4">
-                <label for="input-type">Parental status  :</label>
+                <label for="input-type">IO:interaction with io</label>
             </div>
             <div class="col-sm-2 col-md-1">
                 <label class="radio-inline">
-                    <input name="status" id="parentalstatusb" value="Male" type="radio" />1
+                    <input name="parentalstatus" value="1" type="radio" />
                 </label>
             </div>
             <div class="col-sm-2 col-md-2 text-center">
                 <label class="radio-inline">
-                    <input name="status" id="parentalstatuss" value="Female" type="radio" />2
+                    <input name="parentalstatus" value="2" type="radio" />
                 </label>
             </div>
             <div class="col-sm-3 col-md-2">
                 <label class="radio-inline">
-                    <input name="status" id="parentalstatuss" value="Female" type="radio" />3
+                    <input name="parentalstatus" value="3" type="radio" />
                 </label>
             </div>
             <div class="col-sm-3 col-md-1">
                 <label class="radio-inline">
-                    <input name="status" id="parentalstatuss" value="Female" type="radio" />4
+                    <input name="parentalstatus" value="4" type="radio" />
                 </label>
             </div>
              <div class="col-sm-3 col-md-1">
                 <label class="radio-inline">
-                    <input name="status" id="parentalstatuss" value="Female" type="radio" />5
+                    <input name="parentalstatus" value="5" type="radio" />
                 </label>
             </div>
             </div>
@@ -124,27 +124,27 @@
             </div>
             <div class="col-sm-2 col-md-1">
                 <label class="radio-inline">
-                    <input name="status1" id="parentalstatusb" value="Male" type="radio" />1
+                    <input name="status1"  value="1" type="radio" />
                 </label>
             </div>
             <div class="col-sm-2 col-md-2 text-center">
                 <label class="radio-inline">
-                    <input name="status1" id="parentalstatuss" value="Female" type="radio" />2
+                    <input name="status1"  value="2" type="radio" />
                 </label>
             </div>
             <div class="col-sm-3 col-md-2">
                 <label class="radio-inline">
-                    <input name="status1" id="parentalstatuss" value="Female" type="radio" />3
+                    <input name="status1"  value="3" type="radio" />
                 </label>
             </div>
             <div class="col-sm-3 col-md-1">
                 <label class="radio-inline">
-                    <input name="status1" id="parentalstatuss" value="Female" type="radio" />4
+                    <input name="status1"  value="4" type="radio" />
                 </label>
             </div>
              <div class="col-sm-3 col-md-1">
                 <label class="radio-inline">
-                    <input name="status1" id="parentalstatuss" value="Female" type="radio" />5
+                    <input name="status1"  value="5" type="radio" />
                 </label>
             </div>
             </div>
@@ -158,27 +158,27 @@
                     <div class="row">
                 <div class="col-sm-2 col-md-2 text-center">
                 <label class="radio-inline">
-                    <input name="family1" id="1" value="1" type="radio" />
+                    <input name="family1"  value="1" type="radio" />
                 </label>
                 </div>
                 <div class="col-sm-2 col-md-3 text-center">
                     <label class="radio-inline">
-                    <input name="family1" id="2" value="2" type="radio"          />
+                    <input name="family1"  value="2" type="radio"          />
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-3 text-center">
                     <label class="radio-inline">
-                    <input name="family1" id="3" value="3" type="radio"          />
+                    <input name="family1"  value="3" type="radio"          />
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2 text-center">
                     <label class="radio-inline">
-                    <input name="family1" id="4" value="4" type="radio"          />
+                    <input name="family1"  value="4" type="radio"          />
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2 text-center">
                     <label class="radio-inline">
-                    <input name="family1" id="5" value="5" type="radio"          />
+                    <input name="family1"  value="5" type="radio"          />
                     </label>
                 </div>
                 </div>
@@ -194,34 +194,34 @@
                     <div class="row">
                 <div class="col-sm-2 col-md-2 text-center">
                 <label class="radio-inline">
-                    <input name="family2" id="1" value="1" type="radio" />
+                    <input name="family2"  value="1" type="radio" />
                 </label>
                 </div>
                 <div class="col-sm-2 col-md-3 text-center">
                     <label class="radio-inline">
-                    <input name="family2" id="2" value="2" type="radio"          />
+                    <input name="family2"  value="2" type="radio"          />
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-3 text-center">
                     <label class="radio-inline">
-                    <input name="family2" id="3" value="3" type="radio"          />
+                    <input name="family2"  value="3" type="radio"          />
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2 text-center">
                     <label class="radio-inline">
-                    <input name="family2" id="4" value="4" type="radio"          />
+                    <input name="family2"  value="4" type="radio"          />
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2 text-center">
                     <label class="radio-inline">
-                    <input name="family2" id="5" value="5" type="radio"          />
+                    <input name="family2"  value="5" type="radio"          />
                     </label>
                 </div>
                 </div>
             </div>
         </div>
         <label for="comment">Comment:</label>
-      <textarea class="form-control" rows="3" id="comment2"></textarea>
+      <textarea class="form-control" name="comment1" rows="3" id="comment2"></textarea>
         <div class="row">
                 <div class="col-md-4">
                     <label for="input-type">UI. Understanding and following instructions:</label>
@@ -230,38 +230,41 @@
                     <div class="row">
                 <div class="col-sm-2 col-md-2 text-center">
                 <label class="radio-inline">
-                    <input name="family3" id="1" value="1" type="radio" />
+                    <input name="family3" value="1" type="radio" />
                 </label>
                 </div>
                 <div class="col-sm-2 col-md-3 text-center">
                     <label class="radio-inline">
-                    <input name="family3" id="2" value="2" type="radio"          />
+                    <input name="family3"  value="2" type="radio"          />
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-3 text-center">
                     <label class="radio-inline">
-                    <input name="family3" id="3" value="3" type="radio"          />
+                    <input name="family3"  value="3" type="radio"          />
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2 text-center">
                     <label class="radio-inline">
-                    <input name="family3" id="4" value="4" type="radio"          />
+                    <input name="family3"  value="4" type="radio"          />
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2 text-center">
                     <label class="radio-inline">
-                    <input name="family3" id="5" value="5" type="radio"          />
+                    <input name="family3"  value="5" type="radio"          />
                     </label>
                 </div>
                 </div>
             </div>
         </div>
         <label for="comment">Comment:</label>
-      <textarea class="form-control" rows="3" id="comment2"></textarea>
+      <textarea class="form-control" name="comment1" rows="3" id="comment2"></textarea>
     <div class="text-center">
         <button type="submit" class="btn btn-success">Submit</button>
     </div>
     </div>
-    </div>
     </form>
-        
+   </div>
+   </div>
+   </div>
+   </body>
+   </html>
