--- a/WebAPP/dlsas.html
+++ b/WebAPP/dlsas.html
@@ -40,7 +40,7 @@
         <div class="form-group">
             </br>
             </br>
-             <input type="text" class="form-control" id="name" placeholder="Name of child" required>
+             <input type="text" class="form-control" name="name" placeholder="Name of child" required>
             </br>
             <div id="input-type" class="row">
                 <div class="col-sm-3 col-md-3">
@@ -57,7 +57,7 @@
                     </label>
                 </div>
             </div>
-            <input type="number" class="form-control" id="age" placeholder="Age" required>
+            <input type="number" class="form-control" name="age" placeholder="Age" required>
             </br>
             <div id="input-type" class="row">
                 <div class="col-sm-3 col-md-3">
@@ -92,59 +92,59 @@
             </div>
             <div class="col-sm-2 col-md-1">
                 <label class="radio-inline">
-                    <input name="parentalstatus" value="1" type="radio" />
+                    <input name="io" value="1" type="radio" />
                 </label>
             </div>
             <div class="col-sm-2 col-md-2 text-center">
                 <label class="radio-inline">
-                    <input name="parentalstatus" value="2" type="radio" />
+                    <input name="io" value="2" type="radio" />
                 </label>
             </div>
             <div class="col-sm-3 col-md-2">
                 <label class="radio-inline">
-                    <input name="parentalstatus" value="3" type="radio" />
+                    <input name="io" value="3" type="radio" />
                 </label>
             </div>
             <div class="col-sm-3 col-md-1">
                 <label class="radio-inline">
-                    <input name="parentalstatus" value="4" type="radio" />
+                    <input name="io" value="4" type="radio" />
                 </label>
             </div>
              <div class="col-sm-3 col-md-1">
                 <label class="radio-inline">
-                    <input name="parentalstatus" value="5" type="radio" />
+                    <input name="io" value="5" type="radio" />
                 </label>
             </div>
             </div>
         <label for="comment">Comment:</label>
-        <textarea class="form-control" rows="3" id="comment1"></textarea>
+        <textarea class="form-control" rows="3" name="comment1"></textarea>
         <div id="input-type" class="row">
             <div class="col-sm-3 col-md-4">
                 <label for="input-type">DP. Overcoming difficulties and solving problems :</label>
             </div>
             <div class="col-sm-2 col-md-1">
                 <label class="radio-inline">
-                    <input name="status1"  value="1" type="radio" />
+                    <input name="dp"  value="1" type="radio" />
                 </label>
             </div>
             <div class="col-sm-2 col-md-2 text-center">
                 <label class="radio-inline">
-                    <input name="status1"  value="2" type="radio" />
+                    <input name="dp"  value="2" type="radio" />
                 </label>
             </div>
             <div class="col-sm-3 col-md-2">
                 <label class="radio-inline">
-                    <input name="status1"  value="3" type="radio" />
+                    <input name="dp"  value="3" type="radio" />
                 </label>
             </div>
             <div class="col-sm-3 col-md-1">
                 <label class="radio-inline">
-                    <input name="status1"  value="4" type="radio" />
+                    <input name="dp"  value="4" type="radio" />
                 </label>
             </div>
              <div class="col-sm-3 col-md-1">
                 <label class="radio-inline">
-                    <input name="status1"  value="5" type="radio" />
+                    <input name="dp"  value="5" type="radio" />
                 </label>
             </div>
             </div>
@@ -158,34 +158,34 @@
                     <div class="row">
                 <div class="col-sm-2 col-md-2 text-center">
                 <label class="radio-inline">
-                    <input name="family1"  value="1" type="radio" />
+                    <input name="tl"  value="1" type="radio" />
                 </label>
                 </div>
                 <div class="col-sm-2 col-md-3 text-center">
                     <label class="radio-inline">
-                    <input name="family1"  value="2" type="radio"          />
+                    <input name="tl"  value="2" type="radio"/>
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-3 text-center">
                     <label class="radio-inline">
-                    <input name="family1"  value="3" type="radio"          />
+                    <input name="tl"  value="3" type="radio"/>
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2 text-center">
                     <label class="radio-inline">
-                    <input name="family1"  value="4" type="radio"          />
+                    <input name="tl"  value="4" type="radio" />
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2 text-center">
                     <label class="radio-inline">
-                    <input name="family1"  value="5" type="radio"          />
+                    <input name="tl"  value="5" type="radio"/>
                     </label>
                 </div>
                 </div>
             </div>
         </div>
         <label for="comment">Comment:</label>
-      <textarea class="form-control" rows="3" id="comment2"></textarea>
+      <textarea class="form-control" rows="3" name="comment3"></textarea>
         <div class="row">
                 <div class="col-md-4">
                     <label for="input-type">MC.Managing Conflicts:</label>
@@ -194,34 +194,34 @@
                     <div class="row">
                 <div class="col-sm-2 col-md-2 text-center">
                 <label class="radio-inline">
-                    <input name="family2"  value="1" type="radio" />
+                    <input name="mc"  value="1" type="radio" />
                 </label>
                 </div>
                 <div class="col-sm-2 col-md-3 text-center">
                     <label class="radio-inline">
-                    <input name="family2"  value="2" type="radio"          />
+                    <input name="mc"  value="2" type="radio"/>
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-3 text-center">
                     <label class="radio-inline">
-                    <input name="family2"  value="3" type="radio"          />
+                    <input name="mc"  value="3" type="radio"/>
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2 text-center">
                     <label class="radio-inline">
-                    <input name="family2"  value="4" type="radio"          />
+                    <input name="mc"  value="4" type="radio"/>
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2 text-center">
                     <label class="radio-inline">
-                    <input name="family2"  value="5" type="radio"          />
+                    <input name="mc"  value="5" type="radio"/>
                     </label>
                 </div>
                 </div>
             </div>
         </div>
         <label for="comment">Comment:</label>
-      <textarea class="form-control" name="comment1" rows="3" id="comment2"></textarea>
+      <textarea class="form-control" name="comment1" rows="3" name="comment4"></textarea>
         <div class="row">
                 <div class="col-md-4">
                     <label for="input-type">UI. Understanding and following instructions:</label>
@@ -230,34 +230,34 @@
                     <div class="row">
                 <div class="col-sm-2 col-md-2 text-center">
                 <label class="radio-inline">
-                    <input name="family3" value="1" type="radio" />
+                    <input name="ui" value="1" type="radio" />
                 </label>
                 </div>
                 <div class="col-sm-2 col-md-3 text-center">
                     <label class="radio-inline">
-                    <input name="family3"  value="2" type="radio"          />
+                    <input name="ui"  value="2" type="radio"/>
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-3 text-center">
                     <label class="radio-inline">
-                    <input name="family3"  value="3" type="radio"          />
+                    <input name="ui"  value="3" type="radio" />
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2 text-center">
                     <label class="radio-inline">
-                    <input name="family3"  value="4" type="radio"          />
+                    <input name="ui"  value="4" type="radio"/>
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2 text-center">
                     <label class="radio-inline">
-                    <input name="family3"  value="5" type="radio"          />
+                    <input name="ui"  value="5" type="radio"/>
                     </label>
                 </div>
                 </div>
             </div>
         </div>
         <label for="comment">Comment:</label>
-      <textarea class="form-control" name="comment1" rows="3" id="comment2"></textarea>
+      <textarea class="form-control" name="comment1" rows="3" name="comment5"></textarea>
     <div class="text-center">
         <button type="submit" class="btn btn-success">Submit</button>
     </div>
